# pixiechess_solver

./: .gitignore  DSL.md  README.md  generalized_dsl.py  implementation_plan.md  pixiechess_solver_design.md  pyproject.toml
docs/: dsl_reference.md  eval_protocol.md  executable_world_model_design.md  generalized_piece_program_design.md  generalized_piece_program_implementation_plan.md  piece_program_contract.md  pixiechess_lite_v0.md  search_model_plan.md  simulator_invariants.md  sota_execution_plan.md  strategy_conditioned_search_design.md  strategy_conditioned_search_implementation_plan.md  training_curricula_plan.md  world_conditioned_hypernetwork_design.md  world_conditioned_hypernetwork_implementation_plan.md  world_conditioned_model_implementation_plan.md
scripts/: analyze_training_run.py  aws_launch_training_instance.sh  aws_run_proof.sh  runpod_train_loop.sh
tests/: test_action_encoder_v2.py  test_batched_inference.py  test_board_context_encoder.py  test_checkpoint_arena.py  test_cli.py  test_core_runtime_contracts.py  test_core_state.py  test_curriculum.py  test_dsl_pipeline.py  test_gui.py  test_hypernet.py  test_llm_frontier.py  test_model.py  test_model_eval.py  test_model_guided_search.py  test_policy_value_v2.py  test_policy_value_v4.py  test_program_encoder.py  test_program_equivalence.py  test_program_ir.py  test_program_shadow_runtime.py  test_query_runtime.py  test_rule_repair.py  test_search.py  test_selfplay.py  test_simulator.py  test_simulator_stress.py  test_strategy.py  test_train.py  test_world_model_interfaces.py  test_world_model_runtime.py
(+136 files in other folders)
