[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixie-solver"
version = "0.1.0"
description = "Foundational runtime and tooling for the PixieChess solver."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "calmdentist" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
pixie = "pixie_solver.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
